fix(): Allow clear field hint to be hidden in MS browsers
affects: @atlaskit/field-text

Microsoft browsers provide an X in the field to clear the field. This change allows that hint to be

hidden by configuration.

--- a/packages/field-text/src/styles.less
+++ b/packages/field-text/src/styles.less
@@ -12,3 +12,11 @@
     box-shadow: none;
   }
 }
+
+.inputHideMSClear {
+  .input;
+
+  ::-ms-clear {
+    display: none;
+  }
+}
